test/langtools/tools/javac/annotations/crash_empty_enum_const/CrashEmptyEnumConstructorTest.out
CrashEmptyEnumConstructorTest.java:11:5: compiler.err.missing.meth.body.or.decl.abstract
1 error
